# cnam-intelligence-artificielle

./: .editorconfig  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: 1_exercice.py  2_exercice.py  3_exercice.py  compte_bancaire.py  factorial.py  salary_prediction.py
tests/: test_compte_bancaire.py  test_factorial.py  test_salary_prediction.py
